Fix sidebar horizontal scrolling and overflow
Modify the size, padding, and max-width Tailwind classes to eliminate
text overflow and horizontal scrollling in the sidebar. In particular,
the large screen size was causing problems for horizontal scrolling.

Move more Tailwind classes from the layout file to directives in the
theme scss file.

Completes statelesscode.com backlog item:
Improve padding and typography in the sidebar

--- a/resources/styles/app.scss
+++ b/resources/styles/app.scss
@@ -14,14 +14,21 @@ aside.sidebar {
   a {
     @apply hover:text-scgold-100
   }
-  @apply bg-gradient-to-r from-scblue-800 to-scblue py-8 px-4 sm:px-12
-  text-scgold-500 truncate break-words font-serif
+  @apply flex-auto bg-gradient-to-r from-scblue-800 to-scblue py-8 px-4 sm:px-12 lg:px-4 xl:px-8 2xl:px-12
+  text-scgold-500 break-words font-serif
+}
+
+main.main-layout-content {
+  @apply flex-none lg:max-w-lg xl:max-w-xl 2xl:max-w-2xl
 }
 
 section.widget {
   div.stateless-sage-sidebar-top-level {
-    @apply relative px-4 py-10 bg-white shadow-lg sm:rounded-3xl sm:p-10
-    sm:mx-8 z-10 sm:my-16 sm:inset-4 sm:border-8 sm:border-opacity-0
+    @apply relative px-4 py-10 bg-white shadow-lg z-10
+    sm:rounded-3xl sm:p-10 sm:mx-8 sm:my-16 sm:inset-4 sm:border-8 sm:border-opacity-0
+    lg:rounded-3xl lg:px-4 lg:mx-0 lg:my-12 lg:inset-0 lg:border-0 lg:border-opacity-0
+    xl:rounded-3xl xl:my-16 xl:inset-4 xl:border-8 xl:border-opacity-0
+    2xl:rounded-3xl 2xl:px-10 2xl:mx-8 2xl:my-16 2xl:inset-4 2xl:border-8 2xl:border-opacity-0
   }
   h2 {
     @apply text-scseafoam-900 font-sans text-lg pb-2
@@ -34,15 +41,20 @@ section.widget {
       @apply my-3 text-scbluegray-900
     }
     li {
-      @apply break-words
+      @apply break-words max-w-prose lg:max-w-xs xl:max-w-xs 2xl:max-w-lg
     }
+    @apply lg:text-sm
   }
   @apply relative my-8
 }
 
 .stateless-sage-sidebar-emptydiv {
   @apply absolute inset-0 bg-gradient-to-r from-scgold-800 to-scgold-500 shadow-lg
-  transform -skew-y-6 sm:skew-y-0 sm:-rotate-3 sm:rounded-3xl z-0
+  z-0 transform -skew-y-6
+  sm:skew-y-0 sm:-rotate-3 sm:rounded-3xl
+  lg:skew-y-6 lg:rotate-0 lg:rounded-xl
+  xl:skew-y-0 xl:-rotate-2 xl:rounded-2xl
+  2xl:skew-y-0 2xl:-rotate-3 2xl:rounded-3xl
 }
 
 .site-footer {
